// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker prop locale should works 1`] = `
<div tabindex="0" class="ant-color-picker">
  <div class="ant-color-picker-selection">
    <div id="color-picker-box25">
      <div class="pickr">

        <button type="button" class="pcr-button" role="button" aria-label="toggle color picker dialog"></button>


      </div>
    </div><i aria-label="icon: down" class="anticon anticon-down ant-color-picker-icon"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
        <path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path>
      </svg></i>
  </div>
  <div class="pcr-app" data-theme="monolith" aria-label="color picker dialog" role="window">
    <div class="pcr-selection">
      <div class="pcr-color-preview">
        <button type="button" class="pcr-last-color" aria-label="use previous color"></button>
        <div class="pcr-current-color"></div>
      </div>

      <div class="pcr-color-palette">
        <div class="pcr-picker"></div>
        <div class="pcr-palette" tabindex="0" aria-label="color selection area" role="listbox"></div>
      </div>

      <div class="pcr-color-chooser">
        <div class="pcr-picker"></div>
        <div class="pcr-hue pcr-slider" tabindex="0" aria-label="hue selection slider" role="slider"></div>
      </div>

      <div class="pcr-color-opacity" style="display:none" hidden="">
        <div class="pcr-picker"></div>
        <div class="pcr-opacity pcr-slider" tabindex="0" aria-label="selection slider" role="slider"></div>
      </div>
    </div>

    <div class="pcr-swatches "></div>

    <div class="pcr-interaction">
      <input class="pcr-result" type="text" spellcheck="false" aria-label="color input field">

      <input class="pcr-type active" data-type="HEXA" value="HEXA" type="button">
      <input class="pcr-type" data-type="RGBA" value="RGBA" type="button">
      <input class="pcr-type" data-type="HSLA" value="HSLA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="HSVA" value="HSVA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="CMYK" value="CMYK" type="button" style="display:none" hidden="">

      <input class="pcr-save" value="1セーブ" type="button" aria-label="save and close">
      <input class="pcr-cancel" value="1キャンセル" type="button" style="display:none" hidden="" aria-label="cancel and close">
      <input class="pcr-clear" value="1晴れ" type="button" aria-label="clear and close">
    </div>
  </div>
</div>
`;

exports[`ColorPicker save event should works 1`] = `
<div tabindex="0" class="ant-color-picker">
  <div class="ant-color-picker-selection">
    <div id="color-picker-box31">
      <div class="pickr">

        <button type="button" class="pcr-button" role="button" aria-label="toggle color picker dialog" style="color: rgb(0, 0, 0);"></button>


      </div>
    </div><i aria-label="icon: down" class="anticon anticon-down ant-color-picker-icon"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
        <path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path>
      </svg></i>
  </div>
  <div class="pcr-app visible" data-theme="monolith" aria-label="color picker dialog" role="window" style="left: 512px; top: 384px;">
    <div class="pcr-selection">
      <div class="pcr-color-preview">
        <button type="button" class="pcr-last-color" aria-label="use previous color" style="color: rgb(0, 0, 0);"></button>
        <div class="pcr-current-color"></div>
      </div>

      <div class="pcr-color-palette">
        <div class="pcr-picker"></div>
        <div class="pcr-palette" tabindex="0" aria-label="color selection area" role="listbox"></div>
      </div>

      <div class="pcr-color-chooser">
        <div class="pcr-picker"></div>
        <div class="pcr-hue pcr-slider" tabindex="0" aria-label="hue selection slider" role="slider"></div>
      </div>

      <div class="pcr-color-opacity" style="display:none" hidden="">
        <div class="pcr-picker"></div>
        <div class="pcr-opacity pcr-slider" tabindex="0" aria-label="selection slider" role="slider"></div>
      </div>
    </div>

    <div class="pcr-swatches "></div>

    <div class="pcr-interaction">
      <input class="pcr-result" type="text" spellcheck="false" aria-label="color input field">

      <input class="pcr-type active" data-type="HEXA" value="HEXA" type="button">
      <input class="pcr-type" data-type="RGBA" value="RGBA" type="button">
      <input class="pcr-type" data-type="HSLA" value="HSLA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="HSVA" value="HSVA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="CMYK" value="CMYK" type="button" style="display:none" hidden="">

      <input class="pcr-save" value="Save" type="button" aria-label="save and close">
      <input class="pcr-cancel" value="Cancel" type="button" style="display:none" hidden="" aria-label="cancel and close">
      <input class="pcr-clear" value="Clear" type="button" aria-label="clear and close">
    </div>
  </div>
</div>
`;

exports[`ColorPicker should support default value 1`] = `
<div tabindex="0" class="ant-color-picker">
  <div class="ant-color-picker-selection">
    <div id="color-picker-box1">
      <div class="pickr">

        <button type="button" class="pcr-button" role="button" aria-label="toggle color picker dialog"></button>


      </div>
    </div><i aria-label="icon: down" class="anticon anticon-down ant-color-picker-icon"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
        <path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path>
      </svg></i>
  </div>
  <div class="pcr-app" data-theme="monolith" aria-label="color picker dialog" role="window">
    <div class="pcr-selection">
      <div class="pcr-color-preview">
        <button type="button" class="pcr-last-color" aria-label="use previous color"></button>
        <div class="pcr-current-color"></div>
      </div>

      <div class="pcr-color-palette">
        <div class="pcr-picker"></div>
        <div class="pcr-palette" tabindex="0" aria-label="color selection area" role="listbox"></div>
      </div>

      <div class="pcr-color-chooser">
        <div class="pcr-picker"></div>
        <div class="pcr-hue pcr-slider" tabindex="0" aria-label="hue selection slider" role="slider"></div>
      </div>

      <div class="pcr-color-opacity" style="display:none" hidden="">
        <div class="pcr-picker"></div>
        <div class="pcr-opacity pcr-slider" tabindex="0" aria-label="selection slider" role="slider"></div>
      </div>
    </div>

    <div class="pcr-swatches "></div>

    <div class="pcr-interaction">
      <input class="pcr-result" type="text" spellcheck="false" aria-label="color input field">

      <input class="pcr-type active" data-type="HEXA" value="HEXA" type="button">
      <input class="pcr-type" data-type="RGBA" value="RGBA" type="button">
      <input class="pcr-type" data-type="HSLA" value="HSLA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="HSVA" value="HSVA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="CMYK" value="CMYK" type="button" style="display:none" hidden="">

      <input class="pcr-save" value="Save" type="button" aria-label="save and close">
      <input class="pcr-cancel" value="Cancel" type="button" style="display:none" hidden="" aria-label="cancel and close">
      <input class="pcr-clear" value="Clear" type="button" aria-label="clear and close">
    </div>
  </div>
</div>
`;

exports[`ColorPicker should support disabled 1`] = `
<div tabindex="-1" class="ant-color-picker ant-color-picker-disabled">
  <div class="ant-color-picker-selection">
    <div id="color-picker-box13">
      <div class="pickr">

        <button type="button" class="pcr-button disabled" role="button" aria-label="toggle color picker dialog"></button>


      </div>
    </div><i aria-label="icon: down" class="anticon anticon-down ant-color-picker-icon"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
        <path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path>
      </svg></i>
  </div>
  <div class="pcr-app" data-theme="monolith" aria-label="color picker dialog" role="window">
    <div class="pcr-selection">
      <div class="pcr-color-preview">
        <button type="button" class="pcr-last-color" aria-label="use previous color"></button>
        <div class="pcr-current-color"></div>
      </div>

      <div class="pcr-color-palette">
        <div class="pcr-picker"></div>
        <div class="pcr-palette" tabindex="0" aria-label="color selection area" role="listbox"></div>
      </div>

      <div class="pcr-color-chooser">
        <div class="pcr-picker"></div>
        <div class="pcr-hue pcr-slider" tabindex="0" aria-label="hue selection slider" role="slider"></div>
      </div>

      <div class="pcr-color-opacity" style="display:none" hidden="">
        <div class="pcr-picker"></div>
        <div class="pcr-opacity pcr-slider" tabindex="0" aria-label="selection slider" role="slider"></div>
      </div>
    </div>

    <div class="pcr-swatches "></div>

    <div class="pcr-interaction">
      <input class="pcr-result" type="text" spellcheck="false" aria-label="color input field">

      <input class="pcr-type active" data-type="HEXA" value="HEXA" type="button">
      <input class="pcr-type" data-type="RGBA" value="RGBA" type="button">
      <input class="pcr-type" data-type="HSLA" value="HSLA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="HSVA" value="HSVA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="CMYK" value="CMYK" type="button" style="display:none" hidden="">

      <input class="pcr-save" value="Save" type="button" aria-label="save and close">
      <input class="pcr-cancel" value="Cancel" type="button" style="display:none" hidden="" aria-label="cancel and close">
      <input class="pcr-clear" value="Clear" type="button" aria-label="clear and close">
    </div>
  </div>
</div>
`;

exports[`ColorPicker should support format 1`] = `
<div tabindex="0" class="ant-color-picker ant-color-picker-open">
  <div class="ant-color-picker-selection">
    <div id="color-picker-box19">
      <div class="pickr">

        <button type="button" class="pcr-button" role="button" aria-label="toggle color picker dialog" style="color: rgb(0, 0, 0);"></button>


      </div>
    </div><i aria-label="icon: down" class="anticon anticon-down ant-color-picker-icon"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
        <path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path>
      </svg></i>
  </div>
  <div class="pcr-app visible" data-theme="monolith" aria-label="color picker dialog" role="window" style="left: 512px; top: 384px;">
    <div class="pcr-selection">
      <div class="pcr-color-preview">
        <button type="button" class="pcr-last-color" aria-label="use previous color" style="color: rgb(0, 0, 0);"></button>
        <div class="pcr-current-color"></div>
      </div>

      <div class="pcr-color-palette">
        <div class="pcr-picker"></div>
        <div class="pcr-palette" tabindex="0" aria-label="color selection area" role="listbox"></div>
      </div>

      <div class="pcr-color-chooser">
        <div class="pcr-picker"></div>
        <div class="pcr-hue pcr-slider" tabindex="0" aria-label="hue selection slider" role="slider"></div>
      </div>

      <div class="pcr-color-opacity" style="display:none" hidden="">
        <div class="pcr-picker"></div>
        <div class="pcr-opacity pcr-slider" tabindex="0" aria-label="selection slider" role="slider"></div>
      </div>
    </div>

    <div class="pcr-swatches "></div>

    <div class="pcr-interaction">
      <input class="pcr-result" type="text" spellcheck="false" aria-label="color input field">

      <input class="pcr-type active" data-type="HEXA" value="HEXA" type="button">
      <input class="pcr-type" data-type="RGBA" value="RGBA" type="button">
      <input class="pcr-type" data-type="HSLA" value="HSLA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="HSVA" value="HSVA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="CMYK" value="CMYK" type="button" style="display:none" hidden="">

      <input class="pcr-save" value="Save" type="button" aria-label="save and close">
      <input class="pcr-cancel" value="Cancel" type="button" style="display:none" hidden="" aria-label="cancel and close">
      <input class="pcr-clear" value="Clear" type="button" aria-label="clear and close">
    </div>
  </div>
</div>
`;

exports[`ColorPicker should support v-model 1`] = `
<div tabindex="0" class="ant-color-picker">
  <div class="ant-color-picker-selection">
    <div id="color-picker-box7">
      <div class="pickr">

        <button type="button" class="pcr-button" role="button" aria-label="toggle color picker dialog"></button>


      </div>
    </div><i aria-label="icon: down" class="anticon anticon-down ant-color-picker-icon"><svg viewBox="64 64 896 896" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class="">
        <path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path>
      </svg></i>
  </div>
  <div class="pcr-app" data-theme="monolith" aria-label="color picker dialog" role="window">
    <div class="pcr-selection">
      <div class="pcr-color-preview">
        <button type="button" class="pcr-last-color" aria-label="use previous color"></button>
        <div class="pcr-current-color"></div>
      </div>

      <div class="pcr-color-palette">
        <div class="pcr-picker"></div>
        <div class="pcr-palette" tabindex="0" aria-label="color selection area" role="listbox"></div>
      </div>

      <div class="pcr-color-chooser">
        <div class="pcr-picker"></div>
        <div class="pcr-hue pcr-slider" tabindex="0" aria-label="hue selection slider" role="slider"></div>
      </div>

      <div class="pcr-color-opacity" style="display:none" hidden="">
        <div class="pcr-picker"></div>
        <div class="pcr-opacity pcr-slider" tabindex="0" aria-label="selection slider" role="slider"></div>
      </div>
    </div>

    <div class="pcr-swatches "></div>

    <div class="pcr-interaction">
      <input class="pcr-result" type="text" spellcheck="false" aria-label="color input field">

      <input class="pcr-type active" data-type="HEXA" value="HEXA" type="button">
      <input class="pcr-type" data-type="RGBA" value="RGBA" type="button">
      <input class="pcr-type" data-type="HSLA" value="HSLA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="HSVA" value="HSVA" type="button" style="display:none" hidden="">
      <input class="pcr-type" data-type="CMYK" value="CMYK" type="button" style="display:none" hidden="">

      <input class="pcr-save" value="Save" type="button" aria-label="save and close">
      <input class="pcr-cancel" value="Cancel" type="button" style="display:none" hidden="" aria-label="cancel and close">
      <input class="pcr-clear" value="Clear" type="button" aria-label="clear and close">
    </div>
  </div>
</div>
`;
